# fake_school_json_maker

./: README.md  creator.py  organizer.py  pyproject.toml  school.json
